--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://featlyx_owner:gqLH2ScRpk0x@ep-floral-smoke-a1eov5l3.ap-southeast-1.aws.neon.tech/featlyx?sslmode=require"
+DATABASE_URL="postgresql://feal_owner:1RqMXAZSg6ub@ep-purple-tree-a1ore1ru.ap-southeast-1.aws.neon.tech/feal?sslmode=require"
