--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@prisma/client": "^5.15.0",
+    "@radix-ui/themes": "^3.0.5",
+    "antd": "^5.18.1",
+    "monorepo": "github:radix-ui/themes",
     "next": "14.2.4",
     "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
