--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://feal_owner:1RqMXAZSg6ub@ep-purple-tree-a1ore1ru.ap-southeast-1.aws.neon.tech/feal?sslmode=require"
+JWT_SECRET="secret"
